# embassy_webworker_issue_reproduction

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: lib.rs
